--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -78,6 +78,16 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Online Attention Accumulation for Weakly Supervised Semantic Segmentation</strong><br />
+      Peng-Tao Jiang, Ling-Hao Han, Qibin Hou, Ming-Ming Cheng, <strong>Yunchao Wei</strong><br />
+      IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Affinity Attention Graph Neural Network for Weakly Supervised Semantic Segmentation</strong><br />
       Bingfeng Zhang, Jimin Xiao, Jianbo Jiao, <strong>Yunchao Wei</strong>, Yao Zhao<br />
       IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
