--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body a{
 	-o-transition: 0.5s all;
 	-ms-transition: 0.5s all;
 	text-decoration:none;
-    color:#7f0000;
+    color:#3b82f6;
 }
 h1,h2,h3,h4,h5,h6{
 	margin:0;	
@@ -79,13 +79,13 @@ body a:hover{
     font-weight: 400;
 }
 .navbar-nav li a.active{
-	color:#7f0000!important;
+	color:#3b82f6!important;
 }
 .navbar-nav li:hover a:before{
 	bottom: 0%;
 }
 .navbar-nav  li.active a, .navbar-nav  li.active1 a.dropdown-toggle,.navbar-nav li a:hover {
-    color: #7f0000!important;
+    color: #3b82f6!important;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     background: none;
@@ -119,7 +119,7 @@ nav.navbar.navbar-default {
 	position: absolute;
 	width: 45px;
 	height: 2px;
-	background: rgba(192,0,0,0.4);
+	background: rgba(59,130,246,0.4);
 	content: '';
 	opacity: 0.2;
 	-webkit-transition: all 0.3s;
@@ -204,7 +204,7 @@ nav.navbar.navbar-default {
     left: -77px;
     border: none;
     outline: none;
-    background: rgba(192,0,0,0.5);
+    background: rgba(59,130,246,0.5);
     width: 100%;
     height: 31px;
     margin: 0;
@@ -264,7 +264,7 @@ nav.navbar.navbar-default {
 	width:100%;
 }
 .sb-search.sb-search-open .sb-icon-search, .no-js .sb-search .sb-icon-search {
-    color: #170000;
+    	color: #3b82f6;
     position: absolute;
     cursor: pointer;
     padding: 0 0.5em;
@@ -316,9 +316,9 @@ nav.navbar.navbar-default {
     text-decoration: none;
     display: inline-block;	
 /*-- w3layouts --*/
-    background: rgba(192,0,0,0.5);
+    background: rgba(59,130,246,0.5);
     font-family: 'Roboto Condensed', sans-serif;
-	border: 2px solid rgba(192,0,0,0.5);
+	border: 2px solid rgba(59,130,246,0.5);
 	height: 3em;
 }
 .more a:hover{
@@ -346,7 +346,7 @@ nav.navbar.navbar-default {
     padding: 1em 2em 0;
 }
 .bnr-modal button.close {
-    color: #E64B3B;
+    	color: #3b82f6;
     opacity: .9;
     font-size: 2.5em;
 }
@@ -501,7 +501,7 @@ h4.title {
     margin-bottom: 1em;
     margin-top: 1em;
     padding-bottom: 0.3em;
-    border-bottom: 3px solid #7f0000;
+    border-bottom: 3px solid #3b82f6;
     display: inline-block;
 }
 /*h4.title:before {*/
@@ -565,7 +565,7 @@ p {
     position: absolute;
     bottom: -100%;
     right: 0;
-    background-color: rgba(192, 0, 0, 0.75);
+    background-color: rgba(59, 130, 246, 0.75);
     text-align: center;
     -o-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -585,7 +585,7 @@ img.img-responsive {
 }
 /*--social-icons--*/
 .team .social-icons {
-    background: #7f0000;
+    background: #3b82f6;
     padding: 1.4em 0 0.8em;
 }
 .social-icons ul{
@@ -631,10 +631,10 @@ img.img-responsive {
 .services-left {
     float: left;
     width: 30%;
-    background: rgba(192,0,0,0.4);
+    background: rgba(59,130,246,0.4);
     text-align: center;
     padding: 2.9em 0;
-    border: 2px solid rgba(192,0,0,0.4);
+    border: 2px solid rgba(59,130,246,0.4);
 	-webkit-transition: .5s all;
 	-moz-transition: .5s all;
 	transition: .5s all;
@@ -648,7 +648,7 @@ span.glyphicon {
 .services-right {
     float: right;
     width: 70%;
-    border: 1px solid rgba(192,0,0,0.4);
+    border: 1px solid rgba(59,130,246,0.4);
 	padding: 1.5em;
 }
 .services-right h4 {
@@ -660,7 +660,7 @@ span.glyphicon {
     background: none;
 }
 .services-grids:hover span.glyphicon{
-    color: rgba(192,0,0,0.4);
+    color: rgba(59,130,246,0.4);
 }
 .services-info.services-row2 {
     margin-top: 3.5em;
@@ -710,8 +710,8 @@ span.glyphicon {
 
 .resp-tab-active {
     text-shadow: none;
-    color: #7f0000;
-    border-bottom-color: #7f0000;
+    color: #3b82f6;
+    border-bottom-color: #3b82f6;
 }
 .resp-tabs-container {
 	padding: 0px;
@@ -863,16 +863,16 @@ img.zoom-img:hover,.portfolio-grids:hover img.zoom-img{
     font-size: 1.1em;
     margin: 1em 0 0 0;
     -webkit-appearance: none;
-    background: #7f0000;
+    background: #3b82f6;
     transition: 0.5s all;
-    border: 2px solid #7f0000;
+    border: 2px solid #3b82f6;
     -webkit-transition: 0.5s all;
     transition: 0.5s all;
     -moz-transition: 0.5s all;
 }
 .contact  input[type="submit"]:hover {
     background: none;
-    color: #7f0000;
+    color: #3b82f6;
 }
 
 ::-webkit-input-placeholder {
@@ -898,7 +898,7 @@ img.zoom-img:hover,.portfolio-grids:hover img.zoom-img{
     border: none;
 }
 .map-right {
-    background: rgba(192,0,0,0.4);
+    background: rgba(59,130,246,0.4);
     padding:1em;
 	text-align: center;
 }
@@ -1175,10 +1175,10 @@ h3.title {
     margin-left: 16em;
 }
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: rgba(192,0,0,0.4);
+    background-color: rgba(59,130,246,0.4);
 }
 .navbar-default .navbar-toggle {
-    border-color: rgba(192,0,0,0.4);
+    border-color: rgba(59,130,246,0.4);
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
     background-color: #FFF;
@@ -1655,7 +1655,7 @@ span.glyphicon {
     margin:auto;
     min-height:30px;
     /*background: rgba(255,255,0,0.1);*/
-    border-left:1px dashed rgba(192,0,0,0.4);
+    border-left:1px dashed rgba(59,130,246,0.4);
     padding:0 0 20px 30px;
     position:relative;
 }
@@ -1667,13 +1667,13 @@ span.glyphicon {
     content: " ";
     border: 8px solid rgba(255, 255, 255, 0.74);
     border-radius: 500%;
-    background: #7f0000;
+    background: #3b82f6;
     height: 20px;
     width: 20px;
     transition: all 500ms ease-in-out;
 }
 .history-tl-container ul.tl li:hover::before{
-    border-color: #7f0000;
+    border-color: #3b82f6;
     transition: all 1000ms ease-in-out;
 }
 ul.tl li .item-title{
